// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeProgressScreen should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeProgressScreen
    challengeType="brisk walk"
    currentWorld={1}
    endDateTime="2020-12-31T23:59:59"
    labels={Array []}
    onDismissPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    progressTargets={
      Array [
        2000,
        4000,
        6000,
      ]
    }
    totalCoins={1234}
    unit="steps"
    userProgress={1000}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Image
          resizeMethod="resize"
          resizeMode="cover"
          source={1}
          style={
            Object {
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        />,
        <TopBar
          coins={1234}
          menuLabel="brisk walk"
          onPressLeftIcon={[MockFunction]}
          timer="2020-12-31T23:59:59"
          type="white"
        />,
        <View
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="ocean-white"
            type="steps"
          />
        </View>,
        null,
        <View
          style={
            Object {
              "position": "absolute",
              "right": 32,
              "top": 240,
            }
          }
        >
          <Exit
            onPress={[MockFunction]}
            primaryColour="#023966"
            secondaryColour="white"
          />
        </View>,
        <NavBar
          activeIndex={1}
          additionalBottom={2}
          hasNotification={false}
        />,
      ],
      "style": Object {
        "backgroundColor": "rgb(0,81,143)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "resizeMethod": "resize",
          "resizeMode": "cover",
          "source": 1,
          "style": Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "menuLabel": "brisk walk",
          "onPressLeftIcon": [MockFunction],
          "timer": "2020-12-31T23:59:59",
          "type": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="ocean-white"
            type="steps"
          />,
          "style": Object {
            "marginTop": 12,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "amount": 1000,
            "goals": Array [
              2000,
              4000,
              6000,
            ],
            "showCounter": false,
            "styleType": "ocean-white",
            "type": "steps",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Exit
            onPress={[MockFunction]}
            primaryColour="#023966"
            secondaryColour="white"
          />,
          "style": Object {
            "position": "absolute",
            "right": 32,
            "top": 240,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
            "primaryColour": "#023966",
            "secondaryColour": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeIndex": 1,
          "additionalBottom": 2,
          "hasNotification": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            resizeMethod="resize"
            resizeMode="cover"
            source={1}
            style={
              Object {
                "bottom": 0,
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          />,
          <TopBar
            coins={1234}
            menuLabel="brisk walk"
            onPressLeftIcon={[MockFunction]}
            timer="2020-12-31T23:59:59"
            type="white"
          />,
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="ocean-white"
              type="steps"
            />
          </View>,
          null,
          <View
            style={
              Object {
                "position": "absolute",
                "right": 32,
                "top": 240,
              }
            }
          >
            <Exit
              onPress={[MockFunction]}
              primaryColour="#023966"
              secondaryColour="white"
            />
          </View>,
          <NavBar
            activeIndex={1}
            additionalBottom={2}
            hasNotification={false}
          />,
        ],
        "style": Object {
          "backgroundColor": "rgb(0,81,143)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "resize",
            "resizeMode": "cover",
            "source": 1,
            "style": Object {
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "menuLabel": "brisk walk",
            "onPressLeftIcon": [MockFunction],
            "timer": "2020-12-31T23:59:59",
            "type": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="ocean-white"
              type="steps"
            />,
            "style": Object {
              "marginTop": 12,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "amount": 1000,
              "goals": Array [
                2000,
                4000,
                6000,
              ],
              "showCounter": false,
              "styleType": "ocean-white",
              "type": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Exit
              onPress={[MockFunction]}
              primaryColour="#023966"
              secondaryColour="white"
            />,
            "style": Object {
              "position": "absolute",
              "right": 32,
              "top": 240,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onPress": [MockFunction],
              "primaryColour": "#023966",
              "secondaryColour": "white",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 1,
            "additionalBottom": 2,
            "hasNotification": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeProgressScreen should match snapshot with meditation text  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeProgressScreen
    challengeType="meditation"
    currentWorld={1}
    endDateTime="2020-12-31T23:59:59"
    labels={Array []}
    onDismissPress={[MockFunction]}
    onLeftMenuPress={[MockFunction]}
    progressTargets={
      Array [
        2000,
        4000,
        6000,
      ]
    }
    totalCoins={1234}
    unit="steps"
    userProgress={1000}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Image
          resizeMethod="resize"
          resizeMode="cover"
          source={1}
          style={
            Object {
              "bottom": 0,
              "height": 1330,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            }
          }
        />,
        <TopBar
          coins={1234}
          menuLabel="meditation"
          onPressLeftIcon={[MockFunction]}
          timer="2020-12-31T23:59:59"
          type="default"
        />,
        <View
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="black"
            type="steps"
          />
        </View>,
        null,
        <View
          style={
            Object {
              "position": "absolute",
              "right": 32,
              "top": 240,
            }
          }
        >
          <Exit
            onPress={[MockFunction]}
            primaryColour="#CCCCCC"
            secondaryColour="white"
          />
        </View>,
        <NavBar
          activeIndex={1}
          additionalBottom={2}
          hasNotification={false}
        />,
      ],
      "style": Object {
        "backgroundColor": "rgb(255,255,255)",
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "resizeMethod": "resize",
          "resizeMode": "cover",
          "source": 1,
          "style": Object {
            "bottom": 0,
            "height": 1330,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": "100%",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "menuLabel": "meditation",
          "onPressLeftIcon": [MockFunction],
          "timer": "2020-12-31T23:59:59",
          "type": "default",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ProgressBar
            amount={1000}
            goals={
              Array [
                2000,
                4000,
                6000,
              ]
            }
            showCounter={false}
            styleType="black"
            type="steps"
          />,
          "style": Object {
            "marginTop": 12,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "amount": 1000,
            "goals": Array [
              2000,
              4000,
              6000,
            ],
            "showCounter": false,
            "styleType": "black",
            "type": "steps",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Exit
            onPress={[MockFunction]}
            primaryColour="#CCCCCC"
            secondaryColour="white"
          />,
          "style": Object {
            "position": "absolute",
            "right": 32,
            "top": 240,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
            "primaryColour": "#CCCCCC",
            "secondaryColour": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeIndex": 1,
          "additionalBottom": 2,
          "hasNotification": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            resizeMethod="resize"
            resizeMode="cover"
            source={1}
            style={
              Object {
                "bottom": 0,
                "height": 1330,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "width": "100%",
              }
            }
          />,
          <TopBar
            coins={1234}
            menuLabel="meditation"
            onPressLeftIcon={[MockFunction]}
            timer="2020-12-31T23:59:59"
            type="default"
          />,
          <View
            style={
              Object {
                "marginTop": 12,
              }
            }
          >
            <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="black"
              type="steps"
            />
          </View>,
          null,
          <View
            style={
              Object {
                "position": "absolute",
                "right": 32,
                "top": 240,
              }
            }
          >
            <Exit
              onPress={[MockFunction]}
              primaryColour="#CCCCCC"
              secondaryColour="white"
            />
          </View>,
          <NavBar
            activeIndex={1}
            additionalBottom={2}
            hasNotification={false}
          />,
        ],
        "style": Object {
          "backgroundColor": "rgb(255,255,255)",
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "resizeMethod": "resize",
            "resizeMode": "cover",
            "source": 1,
            "style": Object {
              "bottom": 0,
              "height": 1330,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "menuLabel": "meditation",
            "onPressLeftIcon": [MockFunction],
            "timer": "2020-12-31T23:59:59",
            "type": "default",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ProgressBar
              amount={1000}
              goals={
                Array [
                  2000,
                  4000,
                  6000,
                ]
              }
              showCounter={false}
              styleType="black"
              type="steps"
            />,
            "style": Object {
              "marginTop": 12,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "amount": 1000,
              "goals": Array [
                2000,
                4000,
                6000,
              ],
              "showCounter": false,
              "styleType": "black",
              "type": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Exit
              onPress={[MockFunction]}
              primaryColour="#CCCCCC"
              secondaryColour="white"
            />,
            "style": Object {
              "position": "absolute",
              "right": 32,
              "top": 240,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onPress": [MockFunction],
              "primaryColour": "#CCCCCC",
              "secondaryColour": "white",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 1,
            "additionalBottom": 2,
            "hasNotification": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
